--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -4,7 +4,7 @@ ext {
     COMPILE_SDK = 33
 }
 
-repositories {    
+repositories {
     jcenter()
 }
 
@@ -19,5 +19,6 @@ android {
 
     dependencies {
         api 'com.google.firebase:firebase-messaging:23.3.1'
+        implementation "com.squareup.okhttp3:okhttp:4.12.0"
     }
 }
